# CarlsbadRadShield

./: .gitignore  CarlsbadRadShield.20240906-204201.FCBak  CarlsbadRadShield.FCStd
AnalysisScripts/: BeamAna.C  CMakeLists.txt  DoseAnalysis.C  HDC18.C  HDC20.C  MeatWall.C  TrackAnalysis.C  doseDep.txt  doseDepAll_1E7.csv  doseDepAll_2E7.csv  doseDepGamma.csv  doseDepNeutron_1E7.csv  nOfTrackAll.csv  nOfTrackAntiNeutrino.csv  nOfTrackGamma.csv  nOfTrackNeutrino.csv  nOfTrackNeutron.csv
AnalysisScripts/Archive/: BeamAna.C  HDC18.C
ArcCAD/: ArcCAD.FCStd
G4Sim/: CMakeLists.txt  dosimetry.mac  fullLabDosi.mac  sim.cc  test.mac  vis.mac
G4Sim/GDML/: BeamDumpGDML.FCStd  BeamDumpGDML_Optimized_01.FCStd  CarlsbadGDML.FCStd  DetailedArcModel-worldVOL.gdml  DetailedArcModel.FCStd  DetailedArcWithFloorPlan.FCStd  DetailedArcWithFloorPlan.step  DetailedArcWithFloorPlan_NoPhantoms.step  Setup.gdml
G4Sim/GDML/Archive/: A100420 RADIATION SHIELDING ASSY.STEP  BeamDumpGDML_Optimized_00.FCStd  DetailedArcModel.FCStd  Setup.gdml
G4Sim/GDML/GDML_DetailedArcWithFloorPlan/: Setup.step
G4Sim/geometryFiles/: CarlsbadRadShield-Dome.stl  CarlsbadRadShield-Door-B.stl  CarlsbadRadShield-Door-F.stl  CarlsbadRadShield-HP-2.stl  CarlsbadRadShield-HP-4.stl  CarlsbadRadShield-IronShield.stl  CarlsbadRadShield-VacuumChamber.stl  CarlsbadRadShield-Wall-L.ast  CarlsbadRadShield-Wall-R.stl  CarlsbadRadShield.FCStd
G4Sim/geometryFiles/HDC18/: CarlsbadRadShield-HDC18.stl
G4Sim/inc/: ParticleSD.hh  detcon.hh
G4Sim/src/: ParticleSD.cc  detcon.cc  generator.cc  runaction.cc
(+28 files in other folders)
